<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">delete</string>
    <string name="add_item_fab">Add Titem FAB</string>
    <string name="add_game">Add Game</string>
    <string name="game_backlog">Game Backlog</string>
    <string name="title_activity_add_game">AddGameActivity</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="removed_one_game">Removed 1 game form backlog</string>
    <string name="undo">UNDO</string>
</resources>